Connection Status Overlay: Fix z-index (#3335)

--- a/src/components/left/ConnectionStatusOverlay.scss
+++ b/src/components/left/ConnectionStatusOverlay.scss
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 2;
 
   transition: transform 300ms ease, opacity 300ms ease;
   opacity: 1;
